<resources>
    <string name="app_name">Mumbai Police Traffic</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map_test">MapTest</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_splash">Mumbai Traffic</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_main_information">Information</string>
    <string name="title_activity_emergency_contact">Emergency Contacts</string>
    <string name="title_activity_user_manual">User Manual</string>
    <string name="title_activity_offences">Offence and Penalties</string>
    <string name="title_activity_guidelines">Guidelines</string>
    <string name="title_activity_signs">Signs</string>
    <string name="title_activity_faq">FAQ</string>
    <string name="title_activity_emergency">Emergency</string>
    <string name="title_dialog_guidline">Guidelines</string>
    <string name="login_english">English</string>
    <string name="login_marathi">मराठी</string>
    <string name="brand_hash_tag">#safetyfirst</string>
    <string name="title_activity_web_view_near_by_police">WebViewNearByPolice</string>
    <string name="live_traffic">Live Traffic</string>
    <string name="msg_emergency_help">"Help! I am in emergency. My location is"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FAQ">FAQ</string>
    <string name="btn_near_police_station">Near Police Stations</string>
    <string name="btn_close">Close</string>
    <string name="language">अ</string>
    <string-array name="arr_faq_question">
        <item>Who issues the Motor Driving License in Mumbai?</item>
        <item>Who collects the Road Tax in Mumbai?</item>
        <item>What documents should a driver carry when driving?</item>
        <item>Who is authorized to collect the traffic fine on the spot?</item>
        <item>How do I pay my traffic fine?</item>
        <item>What is the rule for tinted glasses?</item>
        <item>What is the rule regarding seat belts? Is it binding using seat belts while driving in interior areas or by lanes?</item>
        <item>What is the rule for use of mobile phone?</item>
        <item>What is the meaning of the odd and even parking board? Does it relate to date or day of the month /week?</item>
        <item>What are the duties of a driver when his vehicle is involved in an accident resulting in death/bodily injury/damage to property?</item>
        <item>Under what conditions is the towing of a vehicle allowed?</item>
        <item>What is the punishment for drunken driving/driving under the influence of any drug?</item>
        <item>When can the authorities detain a vehicle?</item>
        <item>What are the consequences for driving without a license?</item>
        <item>Can I use mobile phone while driving?</item>
        <item>Can I keep my mobile phone switch on while driving?</item>
        <item>Can I use hands-free or any other accessories of mobile phone while driving?</item>
        <item>Can other occupants of the motor vehicle use mobile phone?</item>
        <item>After receiving call or sms on mobile phone, Can I park my vehicle and use mobile phone?</item>
        <item>What is fine or penalty for using mobile phone, while driving?</item>
        <item>Can I get refund on fine?</item>
        <item>If I don\'t have money to pay fine, what is the procedure?</item>
        <item>If I am a doctor; can I use my mobile phone in an emergency while driving?</item>
        <item>Why must I wear a helmet?</item>
        <item>Why do Governments make Helmet use compulsory?</item>
        <item>How does a helmet work?</item>
        <item>What comprises a good helmet?</item>
        <item>Do Helmets impair hearing?</item>
        <item>How should a helmet fit?</item>
        <item>Do we have a safety standard for motorcycle helmet?</item>
        <item>What do I keep in mind while buying a helmet?</item>
        <item>What is Noise Pollution?</item>
        <item>What are the ill-effects of noise pollution?</item>
        <item>What are the restrictions and time limit of noise level?</item>
        <item>What is meant by externment?</item>
        <item>What is preventive detention?</item>
        <item>What are the executive powers (of CP/DM &amp; other empowered officials) to prohibit certain acts for prevention of disorder?</item>
        <item>What is the meaning of \'Eating House\'?</item>
        <item>What is the meaning of the term ‘place of public entertainment’?</item>
        <item>What is the meaning of the term ‘place of public Amusement?</item>
        <item>What is meant by premises and performance license?</item>
        <item>Do I need permission for using loud speakers?</item>
        <item>Do I need license for public show of cinema?</item>
        <item>Do I need license/ permission for dramatic/mimetic/musical performances?</item>
        <item>Do I need to take permission for organizing a morcha/dharna/public meeting or rally?</item>
        <item>Do I need a license for consumption / possession of Liquor?</item>
        <item>What is Arrest?</item>
        <item>What is meant by "Bailable / Non-bailable offences"?</item>
        <item>What is meant by Prohibitory Orders?</item>
        <item>What is the penalty for contravention / breach of prohibitory orders under section 37 B.P. Act 1951?</item>
        <item>What is an F.I.R?</item>
        <item>How do I lodge F.I.R.?</item>
        <item>What is a cognizable case or What is cognizable offence?</item>
        <item>What is the meaning of the term ‘taking cognizance’?</item>
        <item>What is a Non cognizable offence?</item>
        <item>How do I lodge a NC complaint?</item>
        <item>What is meant by a ‘complaint’?</item>
        <item>What is meant by public place?</item>
        <item>What is a Passport?</item>
        <item>Where is the passport application form available?</item>
        <item>What are the fees for issuing a passport?</item>
        <item>What is the procedure if the passport is lost?</item>
        <item>How many days are required for police verification?</item>
        <item>What are the documents required to apply for a passport?</item>
        <item>What is the procedure if the applicant is minor?</item>
        <item>What is procedure for change of name after marriage / divorce?</item>
        <item>List of applicants entitled to Emigration Check Not Required stamp (E.C.N.R.)</item>
        <item>What is a VISA?</item>
        <item>How does one procure a new Arms License?</item>
        <item>How much time it takes to get a new Arms License?</item>
        <item>Which documents are needed for obtaining a new Arms License?</item>
        <item>How an Arms license is renewed?</item>
        <item>My license has expired three months back. What should I do?</item>
        <item>My license has expired more than a year back, what should I do?</item>
        <item>License holder was out of station and hence could not renew the license in time. What is the remedy?</item>
        <item>How should I obtain a T.J.P. (Temporary Journey Permit)?</item>
        <item>How do I get a license for property protection (Per-Pro Basis)?</item>
        <item>My father/uncle/husband/ relative was a license holder. He expired and now the license or the weapon is in my possession. What should I do?</item>
        <item>My father/relative is old. He wishes to give me his weapon. What is the procedure?</item>
        <item>My All India Arms License was issued in another State. I want it to be registered/renewed in Maharashtra. What should I do?</item>
        <item>I want to make my license issued for one city, valid in the whole of Maharashtra. What is the procedure?</item>
        <item>I want to make my license valid in the whole of India. What should I do?</item>
        <item>I want to sell my weapon. What is the procedure?</item>
    </string-array>
    <string name="information">Information</string>
    <string name="emergency_btn_reset">Reset Contact</string>
    <string name="btn_emergency_contact1">Emergency Contact 1</string>
    <string name="btn_emergency_contact2">Emergency Contact 2</string>
    <string name="btn_emergency_contact3">Emergency Contact 3</string>
    <string name="btn_enter_your_name">Enter Your Name</string>
    <string name="emergency_contact_numbers">Emergency Contact</string>
    <string name="offence_and_penalties">Offence and Penalties</string>
    <string name="signs">signs</string>
    <string name="label_traffic_feed">Traffic Feed</string>
    <string name="msg_emergency_alter">Send Emergency Alert</string>
</resources>