<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"

    android:layout_height="match_parent">

    <include
        android:id="@+id/inc_tool_bar"
        layout="@layout/app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnWebNearByPoliceStation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_near_police_station" />

        <Button
            android:id="@+id/btnFAQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FAQ" />

        <Button
            android:id="@+id/btn_emergency_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emergency_contact_numbers" />

        <Button
            android:id="@+id/btn_offence_penalties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offence_and_penalties" />

        <Button
            android:id="@+id/btn_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signs" />

        <Button
            android:id="@+id/btn_licencing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Licening" />
    </LinearLayout>

</LinearLayout>
