<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingBottom="@dimen/default_padding"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="in.lastlocal.mumbaitraffic.EmergencySMS">

    <EditText
        android:id="@+id/et_emergency_msg_lat_long"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:gravity="left|top"
        android:minHeight="80dp"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/msg_emergency_message" />


    <LinearLayout
        android:id="@+id/ll_info_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_emergency_msg_lat_long"
        android:padding="@dimen/default_padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/info_small_icon" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_padding"
            android:text="message will be sent with last known location"
            android:textColor="@color/gray"
            android:textSize="11sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_add_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_info_sms"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_request_name_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/icon_add_contact"
            android:onClick="onRequestName"
            android:padding="@dimen/activity_vertical_margin"

            android:text="@string/btn_enter_your_name"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_con1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:drawableLeft="@mipmap/icon_add_contact"
            android:drawablePadding="20dp"
            android:gravity="left|center_vertical"
            android:onClick="onContactSelect1"
            android:paddingBottom="@dimen/default_padding"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/btn_emergency_contact1" />

        <Button
            android:layout_marginTop="-6dp"
            android:id="@+id/btn_con2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:drawableLeft="@mipmap/icon_add_contact"
            android:drawablePadding="20dp"
            android:gravity="left|center_vertical"
            android:onClick="onContactSelect1"
            android:paddingBottom="@dimen/default_padding"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/btn_emergency_contact2" />

        <Button
            android:layout_marginTop="-6dp"
            android:id="@+id/btn_con3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:drawableLeft="@mipmap/icon_add_contact"
            android:drawablePadding="20dp"
            android:gravity="left|center_vertical"
            android:onClick="onContactSelect1"
            android:paddingBottom="@dimen/default_padding"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/btn_emergency_contact3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/emergency_selecter"
            android:drawableLeft="@mipmap/emergency"
            android:drawablePadding="10dip"
            android:onClick="onSendMessage"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:text="@string/msg_emergency_alter"
            android:textColor="@color/white" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_bottom_shortcut"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@android:color/transparent"
            android:drawableLeft="@mipmap/reset_30"
            android:drawablePadding="10dip"
            android:onClick="onReset"
            android:padding="@dimen/default_padding"
            android:text="@string/emergency_btn_reset"
            android:textColor="@color/yellow" />

        <Button
            android:id="@+id/btn_how_it_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:drawableLeft="@mipmap/hiw_30"
            android:drawablePadding="10dip"
            android:padding="@dimen/default_padding"
            android:text="How it works?"
            android:textColor="@color/green" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_bottom_shortcut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <at.markushi.ui.CircleButton
            android:layout_width="@dimen/short_cut_circle_width"
            android:layout_height="@dimen/short_cut_circle_width"
            android:layout_gravity="center"
            android:onClick="onCreateShortCut"
            android:src="@mipmap/icon_create_short48"
            app:cb_color="@color/accent_material_light"
            app:cb_pressedRingWidth="6dip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Create Shortcut"
            android:textColor="@color/accent_material_light"
            android:textSize="@dimen/ts_body1" />
    </LinearLayout>


</RelativeLayout>
