<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground"
    tools:context="in.lastlocal.mumbaitraffic.SplashActivity">

    <View
        android:id="@+id/view_place_holder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />

    <ImageView
        android:id="@+id/iv_home_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_above="@+id/view_place_holder"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/splash_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_place_holder"
        android:gravity="center"
        android:text="@string/brand_hash_tag"
        android:textColor="@color/yellow"
        android:textSize="@dimen/ts_headline"
        android:textStyle="bold"
        android:typeface="sans" />

    <LinearLayout
        android:id="@+id/ll_text_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/iv_home_bottom"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/tv_marathi"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="@dimen/default_padding"
            android:text="@string/login_marathi"
            android:textColor="@color/red"
            android:textSize="30sp" />


        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:background="@color/gray"
            android:padding="@dimen/default_padding" />

        <Button
            android:id="@+id/tv_english"
            style="?android:attr/borderlessButtonStyle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="@dimen/default_padding"
            android:text="@string/login_english"
            android:textColor="@color/green"
            android:textSize="@dimen/ts_headline" />

    </LinearLayout>

    <ImageView

        android:id="@+id/iv_home_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/tv_company_name"
        android:background="@drawable/splash_bottom_brand"
        android:paddingBottom="@dimen/default_padding" />

    <TextView
        android:id="@+id/tv_company_name"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/default_padding"
        android:text="Developed by Last Local App Solution"
        android:textColor="@color/white" />

</RelativeLayout>
